--- a/DailyCards2/res/layout/fragment_main.xml
+++ b/DailyCards2/res/layout/fragment_main.xml
@@ -11,8 +11,8 @@
 	    <TextView
 	        android:id="@+id/scratch_text" 
 	        android:layout_centerInParent="true"
-	        android:layout_width="300dp"
-	    	android:layout_height="150dp"
+	        android:layout_width="wrap_content"
+	    	android:layout_height="wrap_content"
 	        android:gravity="center"
 	        android:text="Test"
 	    />
